maj de gitignore

--- a/rapport.tex
+++ b/rapport.tex
@@ -39,7 +39,7 @@ Son rôle au sein de ces départements est de gérer les personnels, les élève
 
 \subsection{L'architecture des projets}
 
-Au sein du rectorat, les les développeurs travaillent sur plusieurs types d'application (métier, outils ...). Ces applications sont constituées de deux modules: 
+Au sein du rectorat, les développeurs travaillent sur plusieurs types d'application (métier, outils ...). Ces applications sont constituées de deux modules: 
 
 Un module Front-end : (Après....)
 
