--- a/rapport.tex
+++ b/rapport.tex
@@ -41,8 +41,6 @@ Son rôle au sein de ces départements est de gérer les personnels, les élève
 
 Au sein du rectorat, les développeurs travaillent sur plusieurs types d'application (métier, outils ...). Ces applications sont constituées de deux modules: 
 
-Un module Front-end : (Après....)
-
 Un module Back-end : Le Back-End, c’est la partie du code qui est exécutée par le serveur, il s’agît d'un serveur fournissant une API gérant la persistance des données et la logique de l'application.La majorité des applications du rectorat sont développées en framwork Spring et en langage Java et il existe quelques applications développées en langage Kotlin dont l'application Apptour.
 
 
@@ -55,6 +53,6 @@ une couche Service: Elle permet de séparer les opérations effectuées par le c
 
 Une couche Contrôller: Il s'agit de l'Api qui permet de répondre à toutes les requêtes envoyées par le client. 
 
-	  
+Un module Front-end :
 
 \end{document}
