rajouter le diagramme de l'achitecture Back

--- a/rapport.tex
+++ b/rapport.tex
@@ -6,6 +6,7 @@
 \usepackage[french]{babel}
 \usepackage{amsfonts,amsmath,amssymb}
 \usepackage{float}
+\usepackage{graphicx}
 
 \title{\textbf{Rapport d'alternance Master 2 Ingénierie logicielle\\ }}
 \author{\textbf{MOUTARAJJI} Mouhyi-Eddine\
@@ -40,7 +41,7 @@ Son rôle au sein de ces départements est de gérer les personnels, les élève
 
 Au sein du rectorat, les développeurs travaillent sur plusieurs types d'application (métier, outils ...). Ces applications sont constituées de deux modules: 
 
-Un module Back-end : Le Back-End, c’est la partie du code qui est exécutée par le serveur, il s’agît d'un serveur fournissant une API gérant la persistance des données et la logique de l'application.La majorité des applications du rectorat sont développées en framwork Spring et en langage Java et il existe quelques applications développées en langage Kotlin dont l'application Apptour.
+Un module Back-end : Le Back-End, c’est la partie du code qui est exécutée par le serveur, il s’agît d'un serveur fournissant une API gérant la persistance des données et la logique de l'application.La majorité des applications du rectorat sont développées en framwork Spring-boot et en langage Java et il existe quelques applications développées en langage Kotlin dont l'application Apptour.
 
 
 Le back-end des applications se décomposent de plusieurs couches: 
@@ -52,6 +53,9 @@ une couche Service: Elle permet de séparer les opérations effectuées par le c
 
 Une couche Contrôller: Il s'agit de l'Api qui permet de répondre à toutes les requêtes envoyées par le client. 
 
+\begin{center}
+ \includegraphics[width=1\textwidth]{diagrammes/ArchitectureProjet.png} 
+\end{center}
 Un module Front-end :
 
 \end{document}
