--- a/rapport.tex
+++ b/rapport.tex
@@ -14,7 +14,10 @@
 \begin{document}
 \date{}
 
-
+\begin{figure}
+\centering
+\includegraphics[width=1.1\textwidth]{diagrammes/logoisticfr_0.png}
+\end{figure}
 
 
 \maketitle
@@ -41,11 +44,11 @@ Son rôle au sein de ces départements est de gérer les personnels, les élève
 
 Au sein du rectorat, les développeurs travaillent sur plusieurs types d'application (métier, outils ...). Ces applications sont constituées de deux modules: 
 
-Un module Back-end : Le Back-End, c’est la partie du code qui est exécutée par le serveur, il s’agît d'un serveur fournissant une API gérant la persistance des données et la logique de l'application.La majorité des applications du rectorat sont développées en framwork Spring-boot et en langage Java et il existe quelques applications développées en langage Kotlin dont l'application Apptour.
+Un module Back-end : Le Back-End, c’est la partie du code qui est exécutée par le serveur, il s’agît d'un serveur fournissant une API gérant la persistance des données et la logique de l'application.La majorité des applications du rectorat sont développées en framework Spring-boot et en langage Java et il existe quelques applications développées en langage Kotlin dont l'application Apptour.
 
+L'architecture des projets du rectorat est unique dans tous les projets afin  de faciliter la prise en main de ces derniers et avoir le même point de vue au sein du l'équipe.
 
 Le back-end des applications se décomposent de plusieurs couches: 
-
 
 une couche Repository/DAO: Repositories sont des interfaces héritant de l'interface Repository. L'objectif de ces interfaces consiste à rendre la création de la couche d'accès aux données (requêtes SELECT, UPDATE...) plus rapide.
 
@@ -54,7 +57,7 @@ une couche Service: Elle permet de séparer les opérations effectuées par le c
 Une couche Contrôller: Il s'agit de l'Api qui permet de répondre à toutes les requêtes envoyées par le client. 
 
 \begin{center}
- \includegraphics[width=1\textwidth]{diagrammes/ArchitectureProjet.png} 
+ \includegraphics[width=1.2\textwidth]{diagrammes/ArchitectureProjet.png} 
 \end{center}
 Un module Front-end :
 
