rajouter le diagramme

--- a/rapport.tex
+++ b/rapport.tex
@@ -62,7 +62,7 @@ Une couche Contrôller: Il s'agit de l'Api qui permet de répondre à toutes les
 \begin{figure}[H]
 	\centering
  		\fbox{\includegraphics[width=1.2\textwidth]{diagrammes/ArchitectureProjet.png}} 
-  		\caption{Arichtecture}
+  		\caption{Arichtecture Back-end d'une application web}
 	\end{figure}
 
 \subsection{Front-end}
@@ -87,6 +87,14 @@ JavaScript, au contraire de HTML et CSS, n'est pas un langage de présentation m
 \subsubsection{React}
 
 Le défaut de JavaScript, mais qui est aussi sa force, est sa grande flexibilité (typage dynamique, première ordre, point virgule optionnel...). On peut donc arriver très facilement à un code illisible et non maintenable. Pour couronner le tout, la DOM est
-plutôt quelque chose de difficile à tester. Le framework React apporte beaucoup de solutions à ces problèmes, avec sa façon de manipuler la DOM (via un moteur de template), l'utilisation de TypeScript (une amélioration du JavaScript par Microsoft
+plutôt quelque chose de difficile à tester. Le framework React apporte beaucoup de solutions à ces problèmes, avec sa façon de manipuler la DOM (via un moteur de template), l'utilisation de TypeScript (une amélioration du JavaScript par Microsoft.De plus, il est très facile de générer un environnement React pour
+un projet. C'est pour ces raisons que l'équipe informatique du rectorat commence à prendre en main ce Langage et l’intégrer dans les nouveaux projets et les nouvelles applications web. 
+
+\begin{figure}[H]
+	\centering
+ 		\fbox{\includegraphics[width=1.2\textwidth]{diagrammes/schema-serveur.png}} 
+  		\caption{Application Web classique}
+	\end{figure}
+ 
 
 \end{document}
