--- a/rapport.tex
+++ b/rapport.tex
@@ -185,7 +185,12 @@ Voici maintenant une présentation plus précise sur les principaux outils utili
 
 \subsubsection{Travail réalisé}
 
-Dans le projet Solycee, j'ai principalement travaillé sur la partie Front-end. J'ai réalisé plusieurs tâches soit en rajoutant des nouvelles vue et des nouveaux composants dans les pages web et/ou en rajoutant des nouvelles fonctionnalités sur les composants existant. Voici une présentation plus précises de toutes les tâches réalisées: 
+Dans le projet Solycee, j'ai principalement travaillé sur la partie Front-end. J'ai réalisé plusieurs tâches soit en rajoutant des nouvelles vue et des nouveaux composants dans les pages web et/ou en rajoutant des nouvelles fonctionnalités sur les composants existant.
+
+Le projet a été développé avant mon arrivé au rectorat. Avant de commencer à réaliser les tâches demandées, il était nécessaire de procéder un travail  de lecture du code implémenté et de la compréhension de ce dernier en posant des multiples questions à mes maîtres d'alternances. Il m'a fallut aussi comprendre l'architecture du projet ainsi que les technologies utilisées. 
+
+Une fois que le code était compréhensible et j'ai acquis toutes les informations importantes sur le projet, j'ai commencé à réalisé les tâches demandées.  Voici une présentation plus précises de toutes les tâches réalisées:   
+
 
 \begin{itemize}
 \item Rajout d'une modale pour prévenir les utilisateurs de la présence d'un bouton aide pour déclencher la documentation interactif.
@@ -195,6 +200,8 @@ Dans le projet Solycee, j'ai principalement travaillé sur la partie Front-end. 
  		\includegraphics[width=1\textwidth]{diagrammes/aide_modal.png}
   		\caption{Image page d'accueil Solycee}
 	\end{figure}
+	
+Pour que ça soit pas dérangeant pour les utilisateurs qui ont eu l'info et ils ont déjà vu la modale, j'ai fait en sorte que ça s'affiche qu'une seule fois pour eux. 
    
 \item Rajout du Bootstrap Tour : Il s'agit de l'ajout d'un bouton \includegraphics[width=5mm,scale=0.5]{diagrammes/Bouton_aideDispo.png} sur toutes les pages web de l'application. En appuyant dessus ça déclenche les pop-ups  de Bootstrap tour (Les étapes du tour sur la page web), une étape se représente avec 3 champs: Element (élément cliqué, Titre (titre de l'étape) \& Content (Description de l'étape). Dans le cas où il n'existe pas de tour sur la page web, le bouton affiché est gris et titré par une phrase "Aide non disponible pour cette page" \includegraphics[width=7mm,scale=0.5]{diagrammes/Bouton_aideNonDispo.png}  
 
@@ -204,7 +211,7 @@ Dans le projet Solycee, j'ai principalement travaillé sur la partie Front-end. 
   		\caption{Exemple d'une étape de Bootstrap Tour}
 	\end{figure}
 
-\item Récupérer le tour d'une page web avec ses étapes: Pour chaque page web de solycee, l'application récupère le tour de cette dernière avec ses étapes en lançant une requête à l'API AppTour. Cette requête (FindTourWithLibelleAplicationAndIdHtmlPage) renvois un json avec toutes les étapes en cas de la présence du tour dans la base. En cas où le tour n'existe pas et la requête renvoi une réponse 404 (Not found), nous mettons le bouton d'aide en gris et il devient non cliquable. 
+\item Récupérer le tour d'une page web avec ses étapes: Pour chaque page web de solycee, l'application récupère le tour de cette dernière avec ses étapes en lançant une requête à l'API AppTour en passant en paramètre le nom de l'application et l'identifiant de la page courante. Cette requête (FindTourWithLibelleAplicationAndIdHtmlPage) renvois un json avec toutes les étapes en cas de la présence du tour dans la base. En cas où le tour n'existe pas et la requête renvoi une réponse 404 (Not found), nous mettons le bouton d'aide en gris et il devient non cliquable. 
 
 \begin{figure}[H]
 	\centering
@@ -255,7 +262,64 @@ API Apptour est une application Sring Boot codé en langage Kotlin. Le but de ce
 
 \end{itemize}
 
+\newpage
+
 \subsubsection{Travail réalisé}
 
+Dans le projet AppTour, j'ai travaillé sur la réalisation d'une API web (Le back-end pour le bootstrapt), j'ai développé plusieurs Web Services qui permets de rajouter ou modifier les étapes des tours ainsi que faire des recherches pour vérifier l’existence des tours. 
+
+Comme noté plus haut, le projet AppTour était initialiser par l'alternant de l'année dernière en créant les tables (Entity). Il existait deux tables, une table Tour et une table Step. j'ai commencé donc par la relecture du code existant et la modification des tables.
+Ensuite, Nous avons travaillés avec mes maîtres d'alternance sur l'architecture du projet.
+
+Une fois que le code et le travail demandé était compris et acquis, j'ai commencé par implémenté du code nécessaire pour réaliser les web services dont nous en avons besoin. Voici une présentation plus précises de toutes les tâches réalisées:   
+
+\begin{itemize}
+
+\item rajouter des éléments dans les tables par exemple Storage dans l'entité Tour qui est un booléen et qui permet de configurer si on veut stocker les tours dans l'historique ou pas ou encore la variable Ordre dans l'entité Step qui un entier et qui permet de donner un ordre pour chaque step.  
+\item Créer toutes les classes DTO afin de les utiliser dans les requêtes  pour envoyer ou récupérer des données.
+
+\item Implémenter les classes Repositories qui permettent de faciliter l'accès  ou le stockage des données dans la base.
+
+\item Créer des classe Mapper qui permettent de convertir un objet Dto à un objet normal ou l'inverser. Par exemple passer d'un objet TourDto à un objet Tour il suffit d'appeler la méthode tourDtoToTour et qui prend en paramètre un objet tourDto : TourDto.  
+
+ \begin{figure}[H]
+	\centering
+ 		\includegraphics[width=1\textwidth]{diagrammes/Exemple_tourDtoToTour.png} 
+  		\caption{Exemple d'une méthode de la classe TourMapper}
+	\end{figure}
+
+\item La réalisation de l'API et tout les services Web, il s'agit d’implémenter des classes contrôllers qui consomme toute les méthodes qui se trouvent dans les classes services. Il existe plusieurs types de services web: 
+\begin{itemize}
+\item Des méthodes GET : Pour la récupération des données de la base dans le cas où elles existent. Par exemple "retrieveTourByIdHtmlPage" ou encore "getStepByElementandIdTour".
+
+\item Des méthodes POST : Pour stocker des nouveaux objets dans la bas de données. Par exemple "saveTour" ou encore "saveNewStep".
+
+\item Des méthodes PUT : Pour mon projet, j'ai du m’en servir  d'une méthode "updateStep" qui permet au utilisateurs de modifier une étapes qui existe déjà.
+
+\end{itemize}
+\item L'implémentation des classes Services: Toutes les actions effectuer le contrôller doivent passer par les classes services. 
+
+Il existe une classe TourService: Dans cette classe, j'ai réalisé plusieurs méthodes qui permettent à stocker ou récupérer des Tours de la base données : 
+\begin{itemize}
+\item  retrieveTourByLibelleAndIdHtmlPage : Elle permet à récupérer un tour en passant en paramètre nom d'une application et l'identifiant de la page HTMl. 
+
+\item saveTourWithLibelleAndIdHtmlPage : Elle permet à stocker un tour dans la base de données en donnant le nom de l'application et l'Id de la page HTML. 
+
+\item updateTour : Elle permet à modifier un tour existant dans la base données en donnant des nouveaux paramètres. 
+\end{itemize}
+
+Il existe aussi une classe StepService : Dans cette classe, j'ai réalisé plusieurs méthodes qui permettent à stocker ou récupérer des Step de la base données : 
+\begin{itemize}
+
+\item  findStepByElementandIdTour : Elle permet à récupérer un Step en passant en paramètre l'élément rechercher et l'identifiant du tour.
+
+\item saveStep : Elle permet à stocker un Step dans la base de données.
+
+\item findOrdreMax : Elle permet de lister tout les step d'un tour par ordre croissant.  
+\end{itemize}
+
+
+
+\end{itemize}
 
 \end{document}
